[metadata]
name = PyCecco
version = 0.0.3
author = Francesco Reconditi
author_email = francesco.reconditi@gmail.com
description = Cecco Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francescoreconditi/PyCecco
project_urls =
    Bug Tracker = https://github.com/francescoreconditi/PyCecco/issues
classifiers =
    Programming Language :: Python :: 3.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
